metadata/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Book_Copy__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Book Copy</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Chosen copy does not correspond to chosen Book</errorMessage>
            <filterItems>
                <field>$Source.Book__c</field>
                <operation>equals</operation>
                <valueField>Book_Copy__c.Book__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Book_Copy__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Book_Title__c</fullName>
        <formula>Book__r.Title__c</formula>
        <label>Book Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Return_Day__c</fullName>
        <defaultValue>(Today() + 3)</defaultValue>
        <label>Expected Return Day</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Loan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Loaned</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>student</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Loan-{0000}</displayFormat>
        <label>Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Copies_not_available</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Book_Copy__r.Availability__c, &quot;Not Available&quot;), OwnerId &lt;&gt; student__r.Id )</errorConditionFormula>
        <errorDisplayField>Book_Copy__c</errorDisplayField>
        <errorMessage>There are no copies available for this book</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Return_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Loan_Date__c &gt;=  Expected_Return_Day__c</errorConditionFormula>
        <errorDisplayField>Expected_Return_Day__c</errorDisplayField>
        <errorMessage>Return day should be after the date of Loan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Student_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( student__c)</errorConditionFormula>
        <errorDisplayField>student__c</errorDisplayField>
        <errorMessage>Student should not be in blank</errorMessage>
    </validationRules>
</CustomObject>